--- a/safeclick/Index.html
+++ b/safeclick/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Festava Live</title>
+    <title>BGI BHOPAL</title>
     <link rel="shortcut icon" href="assets/image/logo.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/8de99c9367.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="desktopcss/styledesktop.css">
